@@ -75,7 +75,24 @@ protected:
      */
     
     virtual bool PassesQualityCuts(const EVENT::Track *const pTrack, const PandoraApi::Track::Parameters &trackParameters) const;
-    
+    /**
+     *  @brief  Get number of hits in TPC of a track
+     * 
+     *  @param  pTrack the lcio track
+     * 
+     *  @return number of hits in TPC of a track
+     */
+    int GetNTpcHits(const EVENT::Track *const pTrack) const;
+
+    /**
+     *  @brief  Get number of hits in FTD of a track
+     * 
+     *  @param  pTrack the lcio track
+     * 
+     *  @return number of hits in FTDof a track
+     */
+    int GetNFtdHits(const EVENT::Track *const pTrack) const;
+
         /**
      *  @brief  Decide whether track reaches the ecal surface. Detector specific
      * 
