@@ -229,7 +229,7 @@ pandora::StatusCode DDTrackCreatorILD::CreateTracks(EVENT::LCEvent *pLCEvent)
 		  trackParameters.m_mass = pandora::PdgTable::GetParticleMass((*iter).second);
 		}
 
-	      if (0.f != signedCurvature)
+	      if (std::numeric_limits<float>::epsilon() < std::fabs(signedCurvature))
 		trackParameters.m_charge = static_cast<int>(signedCurvature / std::fabs(signedCurvature));
 
 	      try //fg: include the next calls in the try block to catch tracks that are yet not fitted properly as ERROR and not exceptions
@@ -268,7 +268,7 @@ bool DDTrackCreatorILD::PassesQualityCuts(const EVENT::Track *const pTrack, cons
   if (trackParameters.m_trackStateAtCalorimeter.Get().GetPosition().GetMagnitude() < m_settings.m_minTrackECalDistanceFromIp)
     return false;
 
-  if (pTrack->getOmega() == 0.f)
+  if (std::fabs(pTrack->getOmega()) < std::numeric_limits<float>::epsilon())
     {
       streamlog_out(ERROR) << "Track has Omega = 0 " << std::endl;
       return false;
@@ -304,7 +304,7 @@ bool DDTrackCreatorILD::PassesQualityCuts(const EVENT::Track *const pTrack, cons
       const float pT(std::sqrt(pX * pX + pY * pY));
       const float rInnermostHit(pTrack->getRadiusOfInnermostHit());
 
-      if ((0.f == pT) || (0.f == pZ) || (rInnermostHit == m_tpcOuterR))
+      if ((std::numeric_limits<float>::epsilon() > std::fabs(pT)) || (std::numeric_limits<float>::epsilon() > std::fabs(pZ)) || (rInnermostHit == m_tpcOuterR))
         {
 	  streamlog_out(ERROR) << "Invalid track parameter, pT " << pT << ", pZ " << pZ << ", rInnermostHit " << rInnermostHit << std::endl;
 	  return false;
@@ -330,11 +330,8 @@ bool DDTrackCreatorILD::PassesQualityCuts(const EVENT::Track *const pTrack, cons
       if (std::fabs(pZ) / momentumAtDca.GetMagnitude() < m_tpcMembraneMaxZ / m_tpcInnerR)
 	nExpectedTpcHits = 0;
 
-      const EVENT::IntVec &hitsBySubdetector(pTrack->getSubdetectorHitNumbers());
-
-      // ---- use hitsInFit :
-      const int nTpcHits = hitsBySubdetector[ 2 * lcio::ILDDetID::TPC - 2 ];
-      const int nFtdHits = hitsBySubdetector[ 2 * lcio::ILDDetID::FTD - 2 ];
+        const int nTpcHits(this->GetNTpcHits(pTrack));
+        const int nFtdHits(this->GetNFtdHits(pTrack));
 
       const int minTpcHits = static_cast<int>(nExpectedTpcHits * m_settings.m_minBarrelTrackerHitFractionOfExpected);
 
@@ -470,8 +467,6 @@ void DDTrackCreatorILD::TrackReachesECAL(const EVENT::Track *const pTrack, Pando
   float hitZMax(-std::numeric_limits<float>::max());
   float hitOuterR(-std::numeric_limits<float>::max());
   
-  int nTpcHits(0);
-  int nFtdHits(0);
   int maxOccupiedFtdLayer(0);
   
   const EVENT::TrackerHitVec &trackerHitVec(pTrack->getTrackerHits());
@@ -495,7 +490,6 @@ void DDTrackCreatorILD::TrackReachesECAL(const EVENT::Track *const pTrack, Pando
 
       if ((r > m_tpcInnerR) && (r < m_tpcOuterR) && (std::fabs(z) <= m_tpcZmax))
         {
-	  nTpcHits++;
 	  continue;
         }
 
@@ -508,12 +502,14 @@ void DDTrackCreatorILD::TrackReachesECAL(const EVENT::Track *const pTrack, Pando
 	      if (static_cast<int>(j) > maxOccupiedFtdLayer)
 		maxOccupiedFtdLayer = static_cast<int>(j);
 
-	      nFtdHits++;
 	      break;
             }
         }
     }
 
+    const int nTpcHits(this->GetNTpcHits(pTrack));
+    const int nFtdHits(this->GetNFtdHits(pTrack));
+    
   // Look to see if there are hits in etd or set, implying track has reached edge of ecal
   if ((hitOuterR > m_minSetRadius) || (hitZMax > m_minEtdZPosition))
     {
@@ -548,3 +544,26 @@ void DDTrackCreatorILD::TrackReachesECAL(const EVENT::Track *const pTrack, Pando
 
   trackParameters.m_reachesCalorimeter = false;
 }
+
+int DDTrackCreatorILD::GetNTpcHits(const EVENT::Track *const pTrack) const
+{
+   // ATTN
+   //According to FG: [ 2 * lcio::ILDDetID::TPC - 2 ] is the first number and it is supposed to
+   //be the number of hits in the fit and this is what should be used !
+   // at least for DD4hep/DDSim
+
+    // ---- use hitsInFit :
+    return pTrack->getSubdetectorHitNumbers()[ 2 * lcio::ILDDetID::TPC - 2 ];
+}
+
+//------------------------------------------------------------------------------------------------------------------------------------------
+
+int DDTrackCreatorILD::GetNFtdHits(const EVENT::Track *const pTrack) const
+{
+    // ATTN
+    //see above
+    // ---- use hitsInFit :
+    return pTrack->getSubdetectorHitNumbers()[ 2 * lcio::ILDDetID::FTD - 2 ];
+}
+
+//
